# hermes-cowsay

./: README.md  pyproject.toml
hermes_cowsay/: __init__.py
tests/: test_cowsay.py
